begin work on datagen