@@ -1,118 +1,133 @@
 package twilightforest.client.model.block.connected;
 
+import com.mojang.datafixers.util.Pair;
 import com.mojang.math.Transformation;
 import net.minecraft.client.renderer.block.model.*;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.client.resources.model.BakedModel;
-import net.minecraft.client.resources.model.Material;
 import net.minecraft.client.resources.model.ModelBaker;
 import net.minecraft.client.resources.model.ModelState;
 import net.minecraft.core.Direction;
 import net.minecraft.core.Vec3i;
-import net.minecraft.resources.Identifier;
+import net.minecraft.util.context.ContextMap;
 import net.minecraft.world.level.block.Block;
-import net.neoforged.neoforge.client.RenderTypeGroup;
-import net.neoforged.neoforge.client.model.ExtraFaceData;
-import net.neoforged.neoforge.client.model.SimpleModelState;
-import net.neoforged.neoforge.client.model.geometry.IGeometryBakingContext;
-import net.neoforged.neoforge.client.model.geometry.IUnbakedGeometry;
-import net.neoforged.neoforge.client.model.geometry.UnbakedGeometryHelper;
-import org.apache.commons.lang3.mutable.MutableObject;
+import net.neoforged.neoforge.client.model.AbstractUnbakedModel;
+import net.neoforged.neoforge.client.model.NeoForgeModelProperties;
+import net.neoforged.neoforge.client.model.StandardModelParameters;
+import net.neoforged.neoforge.client.model.UnbakedElementsHelper;
+import org.jetbrains.annotations.Nullable;
 import org.joml.Vector3f;
 
-import java.lang.reflect.Array;
-import java.util.ArrayList;
-import java.util.EnumSet;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
+import java.util.*;
 
-public class UnbakedConnectedTextureModel implements IUnbakedGeometry<UnbakedConnectedTextureModel> {
+public class UnbakedConnectedTextureModel extends AbstractUnbakedModel {
 
-	private final boolean renderOnDisabledFaces;
-	private final EnumSet<Direction> enabledFaces;
-	private final List<Block> connectableBlocks;
-	private final BlockElement[][] baseElements;
-	private final BlockElement[][][] faceElements;
+	protected final boolean renderOverlayOnAllFaces;
+	protected final Set<Direction> connectedFaces;
+	protected final List<Block> connectableBlocks;
+	protected BlockElement[][] baseElements;
+	protected BlockElement[][][] connectedElements;
 
-	public UnbakedConnectedTextureModel(EnumSet<Direction> enabledFaces, boolean renderOnDisabledFaces, List<Block> connectableBlocks, int baseTintIndex, int baseEmissivity, int tintIndex, int emissivity) {
+	public UnbakedConnectedTextureModel(Pair<Vector3f, Vector3f> element, Set<Direction> connectedFaces, boolean renderOnDisabledFaces, List<Block> connectableBlocks, int baseTintIndex, int baseEmissivity, int tintIndex, int emissivity, StandardModelParameters parameters) {
+		super(parameters);
 		//a list of block faces that should have connected textures.
-		this.enabledFaces = enabledFaces;
-		//whether or not the overlay texture should render on disabled faces or not. Defaults to true
-		this.renderOnDisabledFaces = renderOnDisabledFaces;
+		this.connectedFaces = connectedFaces;
+		//whether the overlay texture should render on all faces or not. Defaults to true
+		this.renderOverlayOnAllFaces = renderOnDisabledFaces;
 		//a list of blocks this block can connect its texture to
 		this.connectableBlocks = connectableBlocks;
 		//base elements - the base block. No Connected Textures on this bit.
-		//the array is made of the directions and quads
+		//the array is made of the directions and "sections". Each section is a corner quadrant of the block
 		this.baseElements = new BlockElement[6][4];
-
 		//face elements - the connected bit of the model.
-		//the array is made of the directions, quads, and each logic value in the ConnectionLogic class
-		this.faceElements = new BlockElement[6][4][5];
-		ExtraFaceData baseFace = new ExtraFaceData(-1, baseEmissivity, baseEmissivity, false);
-		ExtraFaceData overlayFace = new ExtraFaceData(-1, emissivity, emissivity, true);
-		Vec3i center = new Vec3i(8, 8, 8);
+		//the array is made of the directions, "sections", and each logic value in the ConnectionLogic class
+		this.connectedElements = new BlockElement[6][4][5];
+
+		int center = 8;
 
 		for (Direction face : Direction.values()) {
+			Direction cull = this.getCullface(face, element.getFirst(), element.getSecond());
 			Direction[] planeDirections = ConnectionLogic.AXIS_PLANE_DIRECTIONS[face.getAxis().ordinal()];
 
-			for(int i = 0; i < 4; ++i) {
-				Vec3i corner = face.getNormal().offset(planeDirections[i].getNormal()).offset(planeDirections[(i + 1) % 4].getNormal()).offset(1, 1, 1).multiply(8);
-				BlockElement element = new BlockElement(new Vector3f((float)Math.min(center.getX(), corner.getX()), (float)Math.min(center.getY(), corner.getY()), (float)Math.min(center.getZ(), corner.getZ())), new Vector3f((float)Math.max(center.getX(), corner.getX()), (float)Math.max(center.getY(), corner.getY()), (float)Math.max(center.getZ(), corner.getZ())), Map.of(), null, true);
-				this.baseElements[face.get3DDataValue()][i] = new BlockElement(element.from, element.to, Map.of(face, new BlockElementFace(face, baseTintIndex, "", new BlockFaceUV(ConnectionLogic.NONE.remapUVs(element.uvsByFace(face)), 0), baseFace, new MutableObject<>())), null, true);
+			for (int i = 0; i < 4; ++i) {
+				Vec3i corner = face.getUnitVec3i().offset(planeDirections[i].getUnitVec3i()).offset(planeDirections[(i + 1) % 4].getUnitVec3i()).offset(1, 1, 1).multiply(8);
+				BlockElement modifiedElement = new BlockElement(
+					new Vector3f(
+						Math.clamp(Math.min(center - (16 - element.getSecond().x()), corner.getX() + element.getFirst().x()), 0, 16),
+						Math.clamp(Math.min(center - (16 - element.getSecond().y()), corner.getY() + element.getFirst().y()), 0, 16),
+						Math.clamp(Math.min(center - (16 - element.getSecond().z()), corner.getZ() + element.getFirst().z()), 0, 16)),
+					new Vector3f(
+						element.getSecond().x() < center ? element.getSecond().x() : Math.max(center, corner.getX() - (16 - element.getSecond().x())),
+						element.getSecond().y() < center ? element.getSecond().y() : Math.max(center, corner.getY() - (16 - element.getSecond().y())),
+						element.getSecond().z() < center ? element.getSecond().z() : Math.max(center, corner.getZ() - (16 - element.getSecond().z()))),
+					Map.of(), null, true, 0);
+				this.baseElements[face.get3DDataValue()][i] = new BlockElement(modifiedElement.from, modifiedElement.to, Map.of(face, new BlockElementFace(cull, baseTintIndex, "", new BlockFaceUV(ConnectionLogic.NONE.remapUVs(modifiedElement.uvsByFace(face)), 0))), null, true, baseEmissivity);
 
 				for (ConnectionLogic logic : ConnectionLogic.values()) {
-					this.faceElements[face.get3DDataValue()][i][logic.ordinal()] = new BlockElement(element.from, element.to, Map.of(face, new BlockElementFace(face, tintIndex, "", new BlockFaceUV(logic.remapUVs(element.uvsByFace(face)), 0), overlayFace, new MutableObject<>())), null, true);
+					this.connectedElements[face.get3DDataValue()][i][logic.ordinal()] = new BlockElement(modifiedElement.from, modifiedElement.to, Map.of(face, new BlockElementFace(cull, tintIndex, "", new BlockFaceUV(logic.remapUVs(modifiedElement.uvsByFace(face)), 0))), null, true, emissivity);
 				}
 			}
 		}
 	}
 
+	@Nullable
+	private Direction getCullface(Direction direction, Vector3f from, Vector3f to) {
+		boolean cull = switch (direction) {
+			case DOWN -> from.y() == 0.0F;
+			case UP -> to.y() == 16.0F;
+			case NORTH -> from.x() == 0.0F;
+			case SOUTH -> to.x() == 16.0F;
+			case WEST -> from.z() == 0.0F;
+			case EAST -> to.z() == 16.0F;
+		};
+
+		return cull ? direction : null;
+	}
+
 	@Override
-	public BakedModel bake(IGeometryBakingContext context, ModelBaker baker, Function<Material, TextureAtlasSprite> spriteGetter, ModelState modelState, ItemOverrides overrides) {
-		Transformation transformation = context.getRootTransform();
-		if (!transformation.isIdentity()) {
-			modelState = new SimpleModelState(modelState.getRotation().compose(transformation), modelState.isUvLocked());
-		}
+	public BakedModel bake(TextureSlots textureSlots, ModelBaker baker, ModelState state, boolean useAmbientOcclusion, boolean usesBlockLight, ItemTransforms itemTransforms, ContextMap additionalProperties) {
+		Transformation rootTransform = additionalProperties.getOrDefault(NeoForgeModelProperties.TRANSFORM, Transformation.identity());
+		if (!rootTransform.isIdentity())
+			state = UnbakedElementsHelper.composeRootTransformIntoModelState(state, rootTransform);
 
-		//making an array list like this is cursed, would not recommend
-		@SuppressWarnings("unchecked") //this is fine, I hope
-		List<BakedQuad>[] baseQuads = (List<BakedQuad>[]) Array.newInstance(List.class, 6);
+		Map<Direction, BakedQuad[]> baseQuads = new HashMap<>();
+		Set<Direction> unculledFaces = new HashSet<>();
 
-		if (context.hasMaterial("base_texture")) {
-			TextureAtlasSprite baseTexture = spriteGetter.apply(context.getMaterial("base_texture"));
+		if (textureSlots.getMaterial("base_texture") != null) {
+			TextureAtlasSprite baseTexture = baker.findSprite(textureSlots, "base_texture");
 
-			for (int dir = 0; dir < 6; dir++) {
-				baseQuads[dir] = new ArrayList<>();
+			for (Direction dir : Direction.values()) {
+				List<BakedQuad> quadList = new ArrayList<>();
 
-				for (BlockElement element : this.baseElements[dir]) {
-					baseQuads[dir].add(UnbakedGeometryHelper.bakeElementFace(element, element.faces.values().iterator().next(), baseTexture, Direction.values()[dir], modelState));
+				for (BlockElement element : this.baseElements[dir.get3DDataValue()]) {
+					quadList.add(FaceBakery.bakeQuad(element.from, element.to, element.faces.get(dir), baseTexture, dir, state, element.rotation, element.shade, element.lightEmission));
 				}
+				baseQuads.put(dir, quadList.toArray(new BakedQuad[0]));
 			}
-		} else {
-			baseQuads = null;
 		}
 
 		//we'll use this to figure out which texture to use with the Connected Texture logic
 		//NONE uses the first one, everything else uses the 2nd one
-		TextureAtlasSprite[] sprites = new TextureAtlasSprite[]{spriteGetter.apply(context.getMaterial("overlay_texture")), spriteGetter.apply(context.getMaterial("overlay_connected")), spriteGetter.apply(context.getMaterial("particle"))};
-		if (!context.hasMaterial("particle")) {
+		TextureAtlasSprite[] sprites = new TextureAtlasSprite[]{baker.findSprite(textureSlots, "overlay_texture"), baker.findSprite(textureSlots, "overlay_connected"), baker.findSprite(textureSlots, "particle")};
+		if (textureSlots.getMaterial("particle") == null) {
 			sprites[2] = sprites[0];
 		}
 
-		BakedQuad[][][] quads = new BakedQuad[6][4][5];
+		Map<Direction, BakedQuad[][]> connectedQuads = new HashMap<>();
 
-		for (int dir = 0; dir < 6; dir++) {
+		for (Direction dir : Direction.values()) {
+			BakedQuad[][] dirQuads = new BakedQuad[4][5];
 			for (int quad = 0; quad < 4; quad++) {
 				for (int type = 0; type < 5; type++) {
-					BlockElement element = this.faceElements[dir][quad][type];
-					quads[dir][quad][type] = UnbakedGeometryHelper.bakeElementFace(element, element.faces.values().iterator().next(), ConnectionLogic.values()[type].chooseTexture(sprites), Direction.values()[dir], modelState);
+					BlockElement element = this.connectedElements[dir.get3DDataValue()][quad][type];
+					BlockElementFace face = element.faces.get(dir);
+					if (face.cullForDirection() == null) unculledFaces.add(dir);
+					dirQuads[quad][type] = FaceBakery.bakeQuad(element.from, element.to, face, ConnectionLogic.values()[type].chooseTexture(sprites), dir, state, element.rotation, element.shade, element.lightEmission);
 				}
 			}
+			connectedQuads.put(dir, dirQuads);
 		}
 
-		Identifier renderTypeHint = context.getRenderTypeHint();
-		RenderTypeGroup renderTypes = renderTypeHint != null ? context.getRenderType(renderTypeHint) : RenderTypeGroup.EMPTY;
-		return new ConnectedTextureModel(this.enabledFaces, this.renderOnDisabledFaces, this.connectableBlocks, baseQuads, quads, sprites[2], overrides, context.getTransforms(), renderTypes);
+		return new ConnectedTextureModel(this.connectedFaces, unculledFaces, this.renderOverlayOnAllFaces, this.connectableBlocks, baseQuads, connectedQuads, sprites[2], useAmbientOcclusion, usesBlockLight, itemTransforms, this.parameters.renderTypeGroup());
 	}
 }
